--- a/src/App.css
+++ b/src/App.css
@@ -52,8 +52,8 @@
 
 .dashboard__charts {
   display: flex;
-  justify-content: space-around;
-  margin-top: 20px;
+  /* justify-content: space-around; */
+  /* margin-top: 20px; */
 }
 
 table {
