--- a/src/components/transactionsBarChart.css
+++ b/src/components/transactionsBarChart.css
@@ -1,16 +1,14 @@
-
 .barChartContainer {
     background-color: #f8f8f8;
     padding: 20px;
     border-radius: 8px;
-    max-width: 600px;
-    /* margin: 20px auto; */
+    max-width: auto;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
 
 /* Styling for the title */
-h3 {
+.barChartContainer h3 {
     margin-bottom: 20px;
     font-size: 1.4em;
     color: #333;
@@ -18,8 +16,8 @@ h3 {
     padding-bottom: 5px;
 }
 
-/* Bar Chart Styling */
-canvas {
-    max-width: 100%;
-    height: auto;
+/* Set a fixed height for the canvas to increase chart size */
+.barChartContainer canvas {
+    width: 100% !important; /* Ensures chart takes full width */
+    height: 350px !important; /* Fixed height to make the chart more visible */
 }
