--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,24 @@
 .dashboard {
   font-family: Arial, sans-serif;
-  padding: 20px;
+  padding: 15px;
   color: #333;
 }
 
 .dashboard__header {
   text-align: center;
-  margin-bottom: 20px;
+  /* margin-bottom: 10px; */
+  background-color:#71aae3;
 }
 
 .dashboard__header h1 {
-  font-size: 2em;
-  color: #4a90e2;
+  font-size: 2rem;
+  color: #000000;
 }
 
 .dashboard__content {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 5px;
 }
 
 .dashboard__controls {
@@ -52,8 +53,8 @@
 
 .dashboard__charts {
   display: flex;
-  /* justify-content: space-around; */
-  /* margin-top: 20px; */
+  justify-content: space-around;
+  margin-top: 20px;
 }
 
 table {
