--- a/src/components/transactionsBarChart.css
+++ b/src/components/transactionsBarChart.css
@@ -7,7 +7,6 @@
     text-align: center;
 }
 
-/* Styling for the title */
 .barChartContainer h3 {
     margin-bottom: 20px;
     font-size: 1.4em;
@@ -16,8 +15,7 @@
     padding-bottom: 5px;
 }
 
-/* Set a fixed height for the canvas to increase chart size */
 .barChartContainer canvas {
-    width: 100% !important; /* Ensures chart takes full width */
-    height: 350px !important; /* Fixed height to make the chart more visible */
+    width: 100% !important; 
+    height: 350px !important; 
 }
