--- a/src/components/transactionsStatistics.css
+++ b/src/components/transactionsStatistics.css
@@ -2,14 +2,16 @@
 .statisticsContainer {
     background-color: #f9f9f9;
     padding: 20px;
+    width: 30rem;
     border-radius: 8px;
     max-width: 400px;
     margin-top: 20px;
+    margin-bottom: 20px;
+    margin-right: 30px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     
 }
 
-/* Styling for the title */
 h3 {
     margin-bottom: 15px;
     font-size: 1.4em;
@@ -18,14 +20,12 @@ h3 {
     padding-bottom: 5px;
 }
 
-/* Styling for individual statistics */
 p {
     font-size: 1.1em;
     color: #555;
     margin: 8px 0;
 }
 
-/* Emphasizing sale amount in a distinct color */
 p:first-of-type {
     color: #007bff;
     font-weight: bold;
