--- a/src/components/transactionTable.css
+++ b/src/components/transactionTable.css
@@ -23,27 +23,27 @@ th, td {
 
 th:nth-child(1),
 td:nth-child(1) {
-    width: 20%;
+    width: 6%;
 }
 
 th:nth-child(2),
 td:nth-child(2) {
-    width: 40%; 
+    width: 20%; 
 }
 
 th:nth-child(3),
 td:nth-child(3) {
-    width: 15%; 
+    width: 20%; 
 }
 
 th:nth-child(4),
 td:nth-child(4) {
-    width: 10%;
+    width: 4%;
 }
 
 th:nth-child(5),
 td:nth-child(5) {
-    width: 15%;
+    width: 5%;
 }
 
 
@@ -95,4 +95,11 @@ button:not(:disabled):hover {
 
 button + button {
     margin-left: 8px;
+}
+
+.productImage {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+    border-radius: 4px;
 }
